# vlindercli

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  clippy.toml  deny.toml  justfile
agents/pensieve/: Cargo.toml  Vlinderfile  agent.toml  pensieve-agent.toml
agents/pensieve-container/: Cargo.toml  Dockerfile  agent.toml
agents/pensieve-container/src/: bridge.rs  config.rs  handlers.rs  html.rs  intent.rs  main.rs  persistence.rs  summarize.rs  text.rs  util.rs
agents/pensieve-container/src/prompts/: answer_generation.txt  direct_summarize.txt  intent_recognition.txt  map_summarize.txt  reduce_summaries.txt
agents/pensieve/docs/adr/: 001-readability-for-extraction.md  002-rule-based-text-cleaning.md  003-map-reduce-summarization.md  004-html-preprocessing.md  005-persistence-layer.md  006-intent-driven-dispatcher.md  007-question-answering.md  008-two-tier-embeddings-for-search.md
agents/pensieve/models/: nomic-embed.toml  phi3.toml
agents/pensieve/src/: config.rs  handlers.rs  host.rs  html.rs  intent.rs  lib.rs  persistence.rs  summarize.rs  text.rs  util.rs
agents/pensieve/src/prompts/: intent_recognition.txt  query_expansion.txt
agents/pensieve/src/templates/: default_config.toml.j2
crates/vlinder/: Cargo.toml
crates/vlinder-catalog/: Cargo.toml  build.rs
crates/vlinder-catalog/proto/: catalog.proto
crates/vlinder-catalog/src/catalog_service/: client.rs  convert.rs  mod.rs  server.rs
crates/vlinder-core/: Cargo.toml
crates/vlinder-core/src/: lib.rs
crates/vlinder-core/src/domain/: agent.rs  agent_manifest.rs  agent_state.rs  catalog.rs  container_id.rs  dag.rs  diagnostics.rs  embedding.rs  fleet.rs  fleet_manifest.rs  harness.rs  identity.rs  image_digest.rs  image_ref.rs  inference.rs  loader.rs  message.rs  message_queue.rs  mod.rs  model.rs  model_manifest.rs  operation.rs  path.rs  pod_id.rs  provider.rs  queue_bridge.rs  registry.rs  registry_memory.rs  registry_repository.rs  resource_id.rs  routing_key.rs  runtime.rs  sdk.rs  secret_store.rs  service_payloads.rs  service_type.rs  session.rs  state.rs  storage.rs  wire.rs
crates/vlinder-core/src/queue/: in_memory.rs  mod.rs  nats.rs  recording.rs
crates/vlinder-dolt/: Cargo.toml
crates/vlinder-dolt/src/: connection.rs  lib.rs  sidecar.rs  wire.rs  worker.rs
crates/vlinder-dolt/tests/: nats_integration.rs
crates/vlinder-git-dag/: Cargo.toml  build.rs
crates/vlinder-git-dag/src/: git_dag.rs  lib.rs
crates/vlinder-git-dag/tests/: timeline_integration_tests.rs
crates/vlinder-git-dag/tests/common/: mod.rs
crates/vlinder-infer-ollama/: Cargo.toml
crates/vlinder-infer-ollama/src/: lib.rs  types.rs  worker.rs
crates/vlinder-infer-openrouter/: Cargo.toml
crates/vlinder-infer-openrouter/src/: catalog.rs  lib.rs  worker.rs
crates/vlinder-infer-openrouter/tests/: integration_tests.rs
crates/vlinder-lambda-adapter/: Cargo.toml
crates/vlinder-lambda-adapter/src/: adapter.rs  config.rs  lambda_runtime_queue.rs  main.rs
crates/vlinder-nats/: Cargo.toml  build.rs
crates/vlinder-nats-lambda-runtime/: Cargo.toml
crates/vlinder-nats-lambda-runtime/src/: config.rs  lambda-permissions-policy.json  lambda_client.rs  runtime.rs
crates/vlinder-nats/proto/: secret_store.proto
crates/vlinder-nats/src/: connect.rs  lib.rs  queue.rs  secret_store.rs
crates/vlinder-nats/src/secret_service/: client.rs  mod.rs  server.rs
crates/vlinder-nats/tests/: integration_tests.rs
crates/vlinder-payloads/: Cargo.toml
crates/vlinder-payloads/src/: lib.rs  platform.rs
crates/vlinder-payloads/src/infer/: mod.rs  openai.rs
crates/vlinder-podman-runtime/: Cargo.toml
crates/vlinder-podman-runtime/src/: config.rs  lib.rs  podman.rs  podman_api.rs  podman_cli.rs  podman_client.rs  pool.rs  unix_transport.rs
crates/vlinder-podman-sidecar/: Cargo.toml  Dockerfile
crates/vlinder-podman-sidecar/src/: config.rs  dispatch.rs  health.rs  main.rs  sidecar.rs  trace.rs
crates/vlinder-podman-sidecar/stubs/: vlinder-catalog.toml  vlinder-git-dag.toml  vlinder-harness.toml  vlinder-lambda-adapter.toml  vlinder-lambda-runtime.toml  vlinder-nats-lambda-runtime.toml  vlinder-podman-runtime.toml  vlinder.toml  vlinderd.toml
crates/vlinder-provider-server/: Cargo.toml
crates/vlinder-provider-server/src/: dispatch.rs  factory.rs  handler.rs  hosts.rs  lib.rs  provider_server.rs
crates/vlinder-sidecar/: Cargo.toml  Dockerfile
crates/vlinder-sidecar/src/: config.rs  dispatch.rs  factory.rs  http_server.rs  main.rs  provider_server.rs  queue_bridge.rs  sidecar.rs
crates/vlinder-sql-registry/: Cargo.toml
crates/vlinder-sql-registry/proto/: registry.proto
crates/vlinder-sql-registry/src/: lib.rs  persistent.rs  storage.rs
crates/vlinder-sql-registry/tests/: convert_tests.rs  registry_service_tests.rs
crates/vlinder-sql-state/: Cargo.toml  build.rs
crates/vlinder-sql-state/proto/: state.proto
crates/vlinder-sql-state/src/: dag_store.rs  lib.rs  models.rs  registry_store.rs  schema.rs
crates/vlinder-sql-state/src/state_service/: mod.rs  (+3 more)
crates/vlinder-sqlite-kv/: Cargo.toml
crates/vlinder-sqlite-kv/src/: lib.rs  state_store.rs  storage.rs  types.rs  worker.rs
crates/vlinder-sqlite-vec/: Cargo.toml
crates/vlinder-sqlite-vec/src/: lib.rs  storage.rs  types.rs  worker.rs
crates/vlinder/src/: cli.rs  config.rs  main.rs  tracing_setup.rs
crates/vlinderd/: Cargo.toml  build.rs
crates/vlinderd/src/: config.rs  git_dag.rs  harness.rs  lib.rs  loader.rs  main.rs  queue_factory.rs  registry_factory.rs  secret_store_factory.rs  session_server.rs  state_factory.rs  supervisor.rs  tracing_setup.rs  worker.rs  worker_role.rs
crates/vlinderd/tests/: agent_model_integration_tests.rs  agent_tests.rs  container_runtime_tests.rs  convert_tests.rs  daemon_tests.rs  fleet_tests.rs  loader_integration_tests.rs  model_tests.rs  nats_integration_tests.rs  object_storage_integration_tests.rs  ollama_integration_tests.rs  openrouter_integration_tests.rs  registry_service_tests.rs  registry_tests.rs  timeline_integration_tests.rs  vector_storage_integration_tests.rs
(+565 files in other folders)
