[workspace]
resolver = "2"
members = ["crates/vlinderd", "crates/vlinder-core", "crates/vlinder-harness", "crates/vlinder", "crates/vlinder-podman-sidecar", "crates/vlinder-provider-server", "crates/vlinder-infer-openrouter", "crates/vlinder-ollama", "crates/vlinder-sqlite-vec", "crates/vlinder-sqlite-kv", "crates/vlinder-podman-runtime", "crates/vlinder-lambda-runtime", "crates/vlinder-nats", "crates/vlinder-sql-state", "crates/vlinder-catalog", "crates/vlinder-git-dag", "crates/vlinder-sql-registry", "crates/vlinder-lambda-adapter"]
default-members = ["crates/vlinderd", "crates/vlinder-core", "crates/vlinder-harness", "crates/vlinder", "crates/vlinder-podman-sidecar", "crates/vlinder-provider-server", "crates/vlinder-infer-openrouter", "crates/vlinder-ollama", "crates/vlinder-sqlite-vec", "crates/vlinder-sqlite-kv", "crates/vlinder-podman-runtime", "crates/vlinder-lambda-runtime", "crates/vlinder-nats", "crates/vlinder-sql-state", "crates/vlinder-catalog", "crates/vlinder-git-dag", "crates/vlinder-sql-registry", "crates/vlinder-lambda-adapter"]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "warn"
