[package]
name = "pensieve-container"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pensieve-container"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
readability = { version = "0.3", default-features = false }
scraper = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
url = "2"

[profile.release]
opt-level = "s"
