[package]
name = "pensieve"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "1"
minijinja = "2"
once_cell = "1"
readability = { version = "0.3", default-features = false }
scraper = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
url = "2"

[profile.release]
opt-level = "s"
