[package]
name = "vlinder-catalog"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["client", "server"]
client = []
server = []

[dependencies]
vlinder-core = { path = "../vlinder-core" }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[build-dependencies]
tonic-build = "0.12"
