[package]
name = "vlinder-catalog"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["client", "server"]
client = []
server = ["tonic/server", "tonic/router"]

[dependencies]
vlinder-core = { path = "../vlinder-core" }
tonic = { version = "0.12", default-features = false, features = ["channel", "codegen", "prost", "transport"] }
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[build-dependencies]
tonic-build = "0.12"
