[package]
name = "vlinder-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
uuid = { version = "1.20.0", features = ["v4"] }
tracing = "0.1"
base64 = "0.22.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
petname = "2"
rand = "0.8"
toml = "0.8"
semver = "1"
async-openai = { version = "0.32", default-features = false, features = ["chat-completion-types"] }
http = "1"
http-serde-ext = "1"

[lints]
workspace = true
