[package]
name = "vlinder-git-dag"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
vlinder-core = { path = "../vlinder-core" }
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
