[package]
name = "vlinder-lambda-adapter"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "vlinder-lambda-adapter"
path = "src/main.rs"

[dependencies]
vlinder-core = { path = "../vlinder-core" }
vlinder-provider-server = { path = "../vlinder-provider-server" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = "2"
