[package]
name = "vlinder-nats-lambda-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
vlinder-core = { path = "../vlinder-core" }
tracing = "0.1"
aws-config = "1"
aws-sdk-lambda = "1"
aws-sdk-iam = "1"
aws-smithy-types = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[lints]
workspace = true
