[package]
name = "vlinder-nats"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["queue", "secret-store", "secret-client"]
queue = ["dep:async-nats", "dep:serde_json", "dep:futures", "dep:dirs"]
secret-store = ["queue"]
secret-client = []

[dependencies]
vlinder-core = { path = "../vlinder-core" }
serde_json = { version = "1", optional = true }
async-nats = { version = "0.38", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
futures = { version = "0.3", optional = true }
tracing = "0.1"
dirs = { version = "6", optional = true }
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"
