[package]
name = "vlinder-nats"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["queue", "secret-store", "secret-client"]
queue = ["dep:async-nats", "dep:serde_json", "dep:futures", "dep:dirs"]
secret-store = ["queue", "tonic/server", "tonic/router"]
secret-client = []

[dependencies]
vlinder-core = { path = "../vlinder-core" }
serde_json = { version = "1", optional = true }
async-nats = { version = "0.38", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
futures = { version = "0.3", optional = true }
tracing = "0.1"
dirs = { version = "6", optional = true }
tonic = { version = "0.12", default-features = false, features = ["channel", "codegen", "prost", "transport"] }
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"
