[package]
name = "vlinder-payloads"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["openai"]
openai = ["async-openai"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-openai = { version = "0.33", default-features = false, features = ["chat-completion-types"], optional = true }
