[package]
name = "vlinder-podman-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
vlinder-core = { path = "../vlinder-core" }
vlinder-ollama = { path = "../vlinder-ollama" }
vlinder-infer-openrouter = { path = "../vlinder-infer-openrouter" }
vlinder-sqlite-vec = { path = "../vlinder-sqlite-vec" }
vlinder-sqlite-kv = { path = "../vlinder-sqlite-kv" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
semver = "1"
dirs = "6"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
