[package]
name = "vlinder-podman-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
vlinder-core = { path = "../vlinder-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
semver = "1"
dirs = "6"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
