[package]
name = "vlinder-podman-sidecar"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "vlinder-podman-sidecar"
path = "src/main.rs"

[dependencies]
vlinder-core = { path = "../vlinder-core" }
vlinder-provider-server = { path = "../vlinder-provider-server" }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
semver = "1"
ureq = "2"
