[package]
name = "vlinder-provider-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
vlinder-core = { path = "../vlinder-core" }
vlinder-nats = { path = "../vlinder-nats", default-features = false, features = ["queue", "secret-client"] }
vlinder-sql-registry = { path = "../vlinder-sql-registry", default-features = false, features = ["client"] }
vlinder-sql-state = { path = "../vlinder-sql-state", default-features = false, features = ["client"] }
vlinder-ollama = { path = "../vlinder-ollama" }
vlinder-infer-openrouter = { path = "../vlinder-infer-openrouter" }
vlinder-sqlite-vec = { path = "../vlinder-sqlite-vec" }
vlinder-sqlite-kv = { path = "../vlinder-sqlite-kv" }
serde_json = "1"
tracing = "0.1"
tiny_http = "0.12"
