[package]
name = "vlinder-sidecar"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "vlinder-sidecar"
path = "src/main.rs"

[dependencies]
vlinder-core = { path = "../vlinder-core" }
vlinder-proto = { path = "../vlinder-proto" }
vlinder-infer-openrouter = { path = "../vlinder-infer-openrouter" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
semver = "1"
ureq = "2"
tiny_http = "0.12"
base64 = "0.22"
