[package]
name = "vlinder-sidecar"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "vlinder-sidecar"
path = "src/main.rs"

[dependencies]
vlinder-core = { path = "../vlinder-core" }
vlinder-nats = { path = "../vlinder-nats" }
vlinder-proto = { path = "../vlinder-proto" }
vlinder-sql-registry = { path = "../vlinder-sql-registry" }
vlinder-sql-state = { path = "../vlinder-sql-state" }
vlinder-ollama = { path = "../vlinder-ollama" }
vlinder-infer-openrouter = { path = "../vlinder-infer-openrouter" }
vlinder-sqlite-vec = { path = "../vlinder-sqlite-vec" }
vlinder-sqlite-kv = { path = "../vlinder-sqlite-kv" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
semver = "1"
ureq = "2"
tiny_http = "0.12"
