[package]
name = "vlinder-sql-registry"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["client", "server"]
client = []
server = ["dep:rusqlite"]

[dependencies]
vlinder-core = { path = "../vlinder-core" }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
serde_json = "1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
tokio-stream = { version = "0.1.18", features = ["net"] }
