[package]
name = "vlinder-sql-state"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["client", "server"]
client = []
server = ["dep:rusqlite", "dep:diesel", "dep:tiny_http", "tonic/server", "tonic/router"]

[dependencies]
vlinder-core = { path = "../vlinder-core" }
tiny_http = { version = "0.12", optional = true }
tracing = "0.1"
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
diesel = { version = "2", features = ["sqlite", "r2d2"], optional = true }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
tonic = { version = "0.12", default-features = false, features = ["channel", "codegen", "prost", "transport", "tls", "tls-roots"] }
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
ureq = { version = "3", features = ["json"] }

[lints]
workspace = true
