[package]
name = "vlinder-sqlite-kv"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
vlinder-core = { path = "../vlinder-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
