[package]
name = "vlinder-sqlite-kv"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["routing", "worker"]
routing = []
worker = ["dep:rusqlite", "dep:sha2"]

[dependencies]
vlinder-core = { path = "../vlinder-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
tempfile = "3"
