[package]
name = "vlinder-sqlite-vec"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
vlinder-core = { path = "../vlinder-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.7", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
