[package]
name = "vlinder-sqlite-vec"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["routing", "worker"]
routing = []
worker = ["dep:rusqlite", "dep:sqlite-vec", "dep:zerocopy"]

[dependencies]
vlinder-core = { path = "../vlinder-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
sqlite-vec = { version = "0.1", optional = true }
zerocopy = { version = "0.7", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
