[package]
name = "vlinder"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
vlinder-core = { path = "../vlinder-core" }
vlinder-catalog = { path = "../vlinder-catalog" }
vlinder-proto = { path = "../vlinder-proto" }
vlinder-sql-registry = { path = "../vlinder-sql-registry" }
vlinder-sql-state = { path = "../vlinder-sql-state" }
clap = { version = "4", features = ["derive"] }
dirs = "6"
indicatif = "0.17"
reedline = "0.37"
serde = { version = "1", features = ["derive"] }
termimad = "0.30"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
chrono = "0.4"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tempfile = "3"
