[package]
name = "vlinder"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
vlinder-core = { path = "../vlinder-core" }
vlinder-catalog = { path = "../vlinder-catalog", default-features = false, features = ["client"] }
vlinder-nats = { path = "../vlinder-nats", default-features = false, features = ["secret-client"] }
vlinder-harness = { path = "../vlinder-harness", default-features = false, features = ["client"] }
vlinder-sql-registry = { path = "../vlinder-sql-registry", default-features = false, features = ["client"] }
vlinder-sql-state = { path = "../vlinder-sql-state", default-features = false, features = ["client"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
indicatif = "0.17"
reedline = "0.37"
serde = { version = "1", features = ["derive"] }
termimad = "0.30"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
serde_json = "1"
ureq = { version = "3", features = ["json"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
