[package]
name = "vlinderd"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "vlinderd"
path = "src/main.rs"

[features]
default = []
test-support = []

[dependencies]
vlinder-core = { path = "../vlinder-core" }
vlinder-nats = { path = "../vlinder-nats" }
vlinder-ollama = { path = "../vlinder-ollama" }
vlinder-infer-openrouter = { path = "../vlinder-infer-openrouter" }
vlinder-sqlite-vec = { path = "../vlinder-sqlite-vec" }
vlinder-sqlite-kv = { path = "../vlinder-sqlite-kv" }
vlinder-podman-runtime = { path = "../vlinder-podman-runtime" }
vlinder-lambda-runtime = { path = "../vlinder-lambda-runtime" }
vlinder-catalog = { path = "../vlinder-catalog" }
vlinder-harness = { path = "../vlinder-harness" }
vlinder-sql-state = { path = "../vlinder-sql-state" }
vlinder-git-dag = { path = "../vlinder-git-dag" }
vlinder-sql-registry = { path = "../vlinder-sql-registry" }
clap = { version = "4", features = ["derive"] }
dirs = "6"
indicatif = "0.17"
reedline = "0.37"
termimad = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"

# Storage stack (rusqlite moved to vlinder-sql-registry)
sqlite-vec = "0.1"
zerocopy = { version = "0.7", features = ["derive"] }
uuid = { version = "1.20.0", features = ["v4"] }
base64 = "0.22.1"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
ureq = { version = "3", features = ["json"] }
async-openai = { version = "0.32", default-features = false, features = ["chat-completion-types"] }
git2 = "0.19"

# NATS messaging (async engine with sync facade)
async-nats = "0.38"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
futures = "0.3"

# gRPC for registry service
tonic = "0.12"

# Signal handling for graceful shutdown
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3"
